css/styles.css
 /*Base Styles*/
 
  li{
 	list-style: none;
 }
  a{
 	text-decoration: none;
 	color: #333447;
 }
 p,.intro,.contact{
 	width:400px;
  color: #333447;
 }
 section{
 	margin-top:20px;
 }

 /*Typography*/
 h1,h2,h4,p,a{
	font-family:'Lato', sans-serif;
	opacity: 0;
	-webkit-animation: appear 1s ease-out forwards;
	-moz-animation: appear 1s ease-out forwards;
	-o-animation: appear 1s ease-out forwards;
	animation: appear 1s ease-out forwards;
	-webkit-animation-delay: 0.2s;
	-moz-animation-delay: 0.2s;
	-o-animation-delay: 0.2s;
	animation-delay: 0.2s;

 }
 h1,h2,h4{
 	font-weight:400;
  color: #333447;
 }
 h1{
 	font-size:3em;
 }
 h2{
 	font-size:1rem;
 	line-height:1.5;
 }

 p{
	font-size:1rem;
	line-height:1.5;
	 opacity: 0;
	-webkit-animation: appear 1s ease-out forwards;
	-moz-animation: appear 1s ease-out forwards;
	-o-animation: appear 1s ease-out forwards;
	animation: appear 1s ease-out forwards;
	-webkit-animation-delay: 0.4s;
	-moz-animation-delay: 0.4s;
	-o-animation-delay: 0.4s;
	animation-delay: 0.4s;
 }
 /*Navigation*/
 .header {
  background-color: #fff;
  width: 100%;
  z-index: 3;
}

.header ul {
  margin: 0;
  padding: 0;
  list-style: none;
  overflow: hidden;
  background-color: #fff;
}

.header li a {
  display: block;
  padding: 10px 10px;
  text-decoration: none;
}

.header li a:hover,
.header .menu-btn:hover {
  background-color: #fff;
}

.header .logo {
  display: block;
  float: left;
  font-size: 2em;
  padding: 10px 20px;
  text-decoration: none;
}


.header .menu {
  clear: both;
  max-height: 0;
  transition: max-height .2s ease-out;
}

/* menu icon */

.header .menu-icon {
  cursor: pointer;
  display: inline-block;
  padding: 28px 20px;
  position: relative;
  user-select: none;
}

.header .menu-icon .navicon {
  background: #333;
  display: block;
  height: 2px;
  position: relative;
  transition: background .2s ease-out;
  width: 18px;
}

.header .menu-icon .navicon:before,
.header .menu-icon .navicon:after {
  background: #333;
  content: '';
  display: block;
  height: 100%;
  position: absolute;
  transition: all .2s ease-out;
  width: 100%;
}

.header .menu-icon .navicon:before {
  top: 5px;
}

.header .menu-icon .navicon:after {
  top: -5px;
}

/* menu btn */

.header .menu-btn {
  display: none;
}

.header .menu-btn:checked ~ .menu {
  max-height: 240px;
}

.header .menu-btn:checked ~ .menu-icon .navicon {
  background: transparent;
}

.header .menu-btn:checked ~ .menu-icon .navicon:before {
  transform: rotate(-45deg);
}

.header .menu-btn:checked ~ .menu-icon .navicon:after {
  transform: rotate(45deg);
}

.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
  top: 0;
}
 /*Content*/

 .container{
 	display:flex;
 	flex-direction:column;
 	align-items:baseline;
 	margin-left:30px;
 }
 .intro{
 	height:400px;
 }
 .social{
 	height:40px;
 }

 .contact, .last{
 	text-align:center;
 }
 .button{
 	border:1px solid black;
 	background:#000;
 	color:#fff;
 	padding:10px 10px;
 	display:inline-block;
 	margin-top:10px;

 }
 .decorater{
 	width:10%;
 	height:4px;
  margin-bottom:30px;
 	border-radius: 1000px;  
	
 }

 .yellow {
  background:#f1cb5a;
 }
 .pink{ 
  background:#f57e9b;
 }

 .teal {
  background:#77dacff7;
 }
 /*Images*/

 .image {
 	width:450px;
 	margin:90px 0px 90px 0px;
 	box-shadow:0 0 4px 1px rgba(0, 0, 0, 0.2);
 }
/* Animations */

.container-nav a.hvr-underline-reveal {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  position: relative;
  overflow: hidden;
}
a.hvr-underline-reveal:before {
  content: "";
  position: absolute;
  z-index: -1;
  left: 0;
  right: 0;
  bottom: 0;
  background:#f57e9b;  
  height: 2px;
  -webkit-transform: translateY(4px);
  transform: translateY(4px);
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}
a.hvr-underline-reveal:hover:before, a.hvr-underline-reveal:focus:before, a.hvr-underline-reveal:active:before {
  -webkit-transform: translateY(0);
  transform: translateY(0);
}
@-webkit-keyframes appear {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-moz-keyframes appear {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-o-keyframes appear {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes appear {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
 /*Media Queries*/

 @media only screen and (min-width: 800px) {

 /* Base Styles */

    body {
      padding-top:100px;
    }

    p,.intro, .contact{
      width:495px;
    }

 /* Navigation*/

    .container-nav {
      display:flex;
      justify-content:center;
    }

    .menu {
      margin-right:20px;
    } 

    .menu li {
      padding:10px;
    }
    
    .header {
      width:inherit;
      z-index:0;
    }
    .header .menu {
      clear: none;
      max-height: none;
    }
    .header .menu-icon {
      display: none;
    }
  /*Images*/
    .image {
      width:700px;
      margin:90px 0px 90px 0px;
    }
 }

